tests/suite/snapshots/suite__check__tests__check__bad-length1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-length1.xi:2:13]
   │
 2 │     x:int = length(1)
   ·             ────┬────  
   ·                 ╰────── Expected any[] but found int
───╯

