tests/suite/snapshots/suite__check__tests__check__bad-pa3-8.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-pa3-8.xi:1:1]
   │
 1 │ ╭─▶ foo(): bool {
   ⋮ ⋮   
 3 │ ├─▶     b:bool = x != 3
   · │                          
   · ╰────────────────────────── Missing return statement
───╯

