tests/suite/snapshots/suite__check__tests__check__bad-subtract2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-subtract2.xi:2:17]
   │
 2 │     x:int = 1 - {1,2}
   ·                 ──┬──  
   ·                   ╰──── Expected int but found int[]
───╯

