tests/suite/snapshots/suite__check__tests__check__bad-subtract3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-subtract3.xi:2:13]
   │
 2 │     x:int = {1,2} + {} - false
   ·             ─────┬────  
   ·                  ╰────── Expected int but found int[]
───╯

