tests/suite/snapshots/suite__check__tests__check__bad-use-conflict.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-use-conflict.xi:3:1]
   │
 3 │ ╭─▶ foo(x:int) : int {
 4 │ ├─▶     return x
   · │                  
   · ╰────────────────── Implementation does not match signature
───╯

