tests/suite/snapshots/suite__check__tests__check__bad_add_3.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_add_3.xi:2:13]
   │
 2 │     x:int = {1,2} + {} + false
   ·             ─────┬────  
   ·                  ╰────── Expected int but found int[]
───╯

