tests/suite/snapshots/suite__check__tests__check__bad_add_obj_1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_add_obj_1.xi:2:11]
   │
 2 │     t:A = x+y
   ·           ┬  
   ·           ╰── Expected int but found A
───╯

