tests/suite/snapshots/suite__check__tests__check__bad_length_1.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_length_1.xi:2:13]
   │
 2 │     x:int = length(1)
   ·             ────┬────  
   ·                 ╰────── Expected any[] but found int
───╯

